added libtool configuration

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -3,4 +3,10 @@ INCLUDES =
 
 AM_CFLAGS = -Wall
 
-bin_PROGRAMS =
+bin_PROGRAMS = queens matrix
+
+queens_SOURCES = queens.c
+matrix_SOURCES = matrix.c
+
+queens_LDADD = -L../lib -lmpiskel
+matrix_LDADD = -L../lib -lmpiskel
