--- a/configure.ac
+++ b/configure.ac
@@ -4,12 +4,16 @@
 AC_PREREQ([2.63])
 
 AC_INIT([mpi-skel], [0.1], [more.andres@gmail.com])
-AC_CONFIG_SRCDIR([src/mpi-skel.c])
+
+AC_CONFIG_SRCDIR([lib/mpiskel.c])
 AC_CONFIG_HEADERS([inc/config.h])
+AC_CONFIG_MACRO_DIR([m4])
+
 AM_INIT_AUTOMAKE
 
 # Checks for programs.
 AC_PROG_CC
+AC_PROG_LIBTOOL
 
 # Checks for libraries.
 
@@ -20,8 +24,10 @@ AC_PROG_CC
 # Checks for library functions.
 
 AC_CONFIG_FILES([Makefile
-                 doc/Makefile
+                 lib/Makefile
                  inc/Makefile
                  src/Makefile
+                 doc/Makefile
                  t/Makefile])
+
 AC_OUTPUT
