--- a/trunk/configure.ac
+++ b/trunk/configure.ac
@@ -1,13 +1,10 @@
 #                                               -*- Autoconf -*-
 # Process this file with autoconf to produce a configure script.
 
-AC_PREREQ([2.63])
-
 AC_INIT([mpi-skel], [0.1], [more.andres@gmail.com])
 
 AC_CONFIG_SRCDIR([lib/mpiskel.c])
 AC_CONFIG_HEADERS([inc/config.h])
-AC_CONFIG_MACRO_DIR([m4])
 
 AM_INIT_AUTOMAKE
 
@@ -20,11 +17,17 @@ AC_PROG_RANLIB
 # Checks for libraries.
 
 # Checks for header files.
+AC_HEADER_TIME
+AC_CHECK_HEADERS([sys/time.h])
 
 # Checks for typedefs, structures, and compiler characteristics.
+AC_C_CONST
 
 # Checks for library functions.
+AC_FUNC_STRFTIME
+AC_CHECK_FUNCS([gettimeofday])
 
+# Makefiles
 AC_CONFIG_FILES([Makefile
                  lib/Makefile
                  inc/Makefile
