--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -3,10 +3,12 @@ INCLUDES =
 
 AM_CFLAGS = -Wall
 
-bin_PROGRAMS = queens matrix
+bin_PROGRAMS = queens matrix heat
 
 queens_SOURCES = queens.c
 matrix_SOURCES = matrix.c
+heat_SOURCES = heat.c
 
 queens_LDADD = -L../lib -lmpiskel
 matrix_LDADD = -L../lib -lmpiskel
+heat_LDADD = -L../lib -lmpiskel
