--- a/trunk/lib/Makefile.am
+++ b/trunk/lib/Makefile.am
@@ -4,4 +4,4 @@ INCLUDES =
 AM_CFLAGS = -Wall
 
 lib_LTLIBRARIES = libmpiskel.la
-libmpiskel_la_SOURCES = mpiskel.c utils.c arg.c log.c mpi.c
+libmpiskel_la_SOURCES = mpiskel.c utils.c arg.c log.c mpi.c pipe.c
