--- a/trunk/lib/Makefile.am
+++ b/trunk/lib/Makefile.am
@@ -2,6 +2,7 @@ EXTRA_DIST =
 INCLUDES =
 
 AM_CFLAGS = -Wall
+AM_LDFLAGS = -lmpi
 
 lib_LTLIBRARIES = libmpiskel.la
 libmpiskel_la_SOURCES = mpiskel.c utils.c arg.c log.c mpi.c pipe.c
