all stage callbacks return int

--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -5,4 +5,4 @@ AM_CFLAGS = -Wall
 AM_LDFLAGS = -lmpi
 
 lib_LTLIBRARIES = libmpiskel.la
-libmpiskel_la_SOURCES = mpiskel.c utils.c arg.c log.c mpi.c pipe.c
+libmpiskel_la_SOURCES = mpiskel.c utils.c arg.c log.c mpi.c
